--- a/orm/trpc-nextjs/package.json
+++ b/orm/trpc-nextjs/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "@prisma/client": "5.21.1",
-    "@tanstack/react-query": "5.59.16",
-    "@trpc/client": "next",
-    "@trpc/next": "next",
-    "@trpc/react-query": "next",
-    "@trpc/server": "next",
+    "@tanstack/react-query": "4.36.1",
+    "@trpc/client": "10.45.2",
+    "@trpc/next": "10.45.2",
+    "@trpc/react-query": "10.45.2",
+    "@trpc/server": "10.45.2",
     "next": "14.2.16",
     "react": "18.3.1",
     "react-dom": "18.3.1",
